# riftforge-engine

./: AGENTS.md  README.md  command_support.py  commands.py  help_topics.py  maps.py  persistence.py  pyproject.toml  server.py  world.py
.github/workflows/: ci.yml
content/maps/: demo.json
docs/: ENGINE_CONSUMER.md  RELEASING_RIFTFORGE.md  UPGRADING_RIFTFORGE.md
docs/plans/: connection_gateway.md  two_repo_purity.md
engine/: __init__.py  auth.py  auto_deploy.py  bug_filing.py  bug_webhook.py  char_index.py  command_support.py  connection.py  copyover.py  deploy_guard.py  deploy_notify.py  display_prefs.py  game_calendar.py  gateway.py  gateway_client.py  gateway_protocol.py  gm_notify.py  gmcp.py  help_misses.py  hooks.py  mssp.py  npc_act.py  persistence.py  reports.py  snoop.py  style.py  telnet.py  vision.py  watch_and_run.py  world.py
engine/verbs/: __init__.py  basic.py
tools/: engine_smoke.py  export_public_engine.py  packaging_smoke.py
